# dbd-tooltips-tooling

./: .gitignore  .tool-versions  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: fetch.yml  release.yml
dbd_tooling/aux/: decode_img.py  locale_gen.py
dbd_tooling/features/: gen_feature_flags.py
dbd_tooling/fetch/: cleanup.py  icons.py  im_gen.py  perks.py  powers_addons.py  shared.py  utils.py
dbd_tooling/fetch/locales/: de.py  fr.py  shared.py
