[project]
name = "dbd_tooling"
version = "1.0.0"
description = "Tooling for Dead by Daylight Twitch Extension"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.3",
    "minify-html>=0.16.4",
    "pillow>=11.1.0",
    "python-slugify>=8.0.4",
    "requests>=2.32.3",
]
