[project]
name = "dbd_tooling"
version = "1.0.0"
description = "Tooling for Dead by Daylight Twitch Extension"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "minify-html>=0.18.1",
    "pillow>=12.2.0",
    "python-slugify>=8.0.4",
    "requests>=2.33.1",
    "httpx>=0.25.0",
]
